--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <a href="index.html">sobre mim</a>
                 </li>
                 <li>
-                    <a href="https://github.com/eltobrgs">portfolio</a>
+                    <a href="https://eltobrgs.github.io/my-portfolio/">portfolio</a>
                 </li>
                 <li>
                     <a href="https://wa.me/+5589994042351">contato</a>
